namespace CryptoArbitrage.Engine.DesignPatterns.Structural.Bridge;

/// <summary>
/// Concrete Implementor #1 - BlockchainNetwork
/// Simulates direct interaction with a blockchain network (e.g., Ethereum, Bitcoin).
/// </summary>
public class BlockchainNetwork : ICryptoImplementor
{
    private readonly string _networkName;
    private int _transactionCounter;

    public BlockchainNetwork(string networkName = "Ethereum")
    {
        _networkName = networkName;
        _transactionCounter = 0;
    }

    public string ProcessTransaction(string transactionData)
    {
        // Simulate blockchain transaction processing
        _transactionCounter++;
        string blockHash = $"0x{Guid.NewGuid():N}".Substring(0, 66);
        Console.WriteLine($"  [BlockchainNetwork] Processing transaction on {_networkName}...");
        Console.WriteLine($"  [BlockchainNetwork] Transaction #{_transactionCounter}: {transactionData}");
        Console.WriteLine($"  [BlockchainNetwork] Block hash: {blockHash}");
        System.Threading.Thread.Sleep(100); // Simulate network delay
        return blockHash;
    }

    public string EncryptData(string plainData)
    {
        // Simulate blockchain-level encryption (e.g., Keccak-256)
        Console.WriteLine($"  [BlockchainNetwork] Encrypting data using {_networkName} standard...");
        string encrypted = $"KECCAK256_{Convert.ToBase64String(System.Text.Encoding.UTF8.GetBytes(plainData))}";
        Console.WriteLine($"  [BlockchainNetwork] Encrypted (Keccak-256): {encrypted}");
        return encrypted;
    }

    public bool ValidateBlock(string blockData)
    {
        // Simulate blockchain validation rules
        Console.WriteLine($"  [BlockchainNetwork] Validating block data on {_networkName}...");
        bool isValid = !string.IsNullOrEmpty(blockData) && blockData.Length > 5;
        Console.WriteLine($"  [BlockchainNetwork] Validation result: {(isValid ? "VALID" : "INVALID")}");
        return isValid;
    }

    public string GetImplementationName() => _networkName;
}
