namespace CryptoArbitrage.Engine.DesignPatterns.Structural.Bridge;

/// <summary>
/// Concrete Implementor #2 - CryptoAPIService
/// Simulates interaction with external cryptocurrency APIs (e.g., CoinGecko, Binance API).
/// </summary>
public class CryptoAPIService : ICryptoImplementor
{
    private readonly string _apiProvider;
    private readonly string _apiKey;

    public CryptoAPIService(string apiProvider = "Binance", string apiKey = "default-key")
    {
        _apiProvider = apiProvider;
        _apiKey = apiKey;
    }

    public string ProcessTransaction(string transactionData)
    {
        // Simulate API transaction processing
        Console.WriteLine($"  [CryptoAPIService] Sending request to {_apiProvider} API...");
        Console.WriteLine($"  [CryptoAPIService] Transaction data: {transactionData}");
        
        // Simulate API response
        string responseId = $"API_{Guid.NewGuid().ToString().Split('-')[0].ToUpper()}";
        int responseCode = 200;
        Console.WriteLine($"  [CryptoAPIService] API Response: {responseCode}, Order ID: {responseId}");
        return responseId;
    }

    public string EncryptData(string plainData)
    {
        // Simulate API-level encryption (e.g., AES-256)
        Console.WriteLine($"  [CryptoAPIService] Encrypting with {_apiProvider} AES-256 standard...");
        string encrypted = Convert.ToBase64String(System.Text.Encoding.UTF8.GetBytes(plainData));
        Console.WriteLine($"  [CryptoAPIService] Encrypted (Base64/AES-256): {encrypted}");
        return encrypted;
    }

    public bool ValidateBlock(string blockData)
    {
        // Simulate API validation rules
        Console.WriteLine($"  [CryptoAPIService] Validating data via {_apiProvider} API...");
        
        // Simulate API schema validation
        bool isValid = !string.IsNullOrEmpty(blockData) && blockData.Contains(":");
        Console.WriteLine($"  [CryptoAPIService] Schema validation: {(isValid ? "VALID" : "INVALID")}");
        return isValid;
    }

    public string GetImplementationName() => _apiProvider;
}
